--- a/src/app/admin/registro-trabajadores/registro-trabajadores.component.html
+++ b/src/app/admin/registro-trabajadores/registro-trabajadores.component.html
@@ -7,28 +7,22 @@
     </div>
     <div class="field">
       <label for="apellidos">Apellidos</label>
-      <input type="text" pInputText id="apellidos" [(ngModel)]="trabajador.lastName" name="apellidos" required
-             autocomplete="off">
+      <input type="text" pInputText id="apellidos" [(ngModel)]="trabajador.lastName" name="apellidos" required autocomplete="off">
     </div>
-
     <div class="field">
       <label for="foto">Foto</label>
       <input type="file" (change)="onFileSelected($event)" id="foto" name="foto" aria-label="Carga una foto">
       <img *ngIf="selectedFile" [src]="selectedFileUrl" alt="Foto seleccionada">
     </div>
-
     <div class="field">
       <label for="usuario">Usuario</label>
-      <input type="text" pInputText id="usuario" [(ngModel)]="trabajador.user" name="usuario" required
-             autocomplete="off">
+      <input type="text" pInputText id="usuario" [(ngModel)]="trabajador.user" name="usuario" required autocomplete="off">
     </div>
     <div class="field">
       <label for="contrasena">Contraseña</label>
-      <input type="password" pInputText id="contrasena" [(ngModel)]="trabajador.password" name="contrasena" required
-             autocomplete="off">
+      <input type="password" pInputText id="contrasena" [(ngModel)]="trabajador.password" name="contrasena" required autocomplete="off">
     </div>
     <button type="submit" pButton label="Registrar" [disabled]="!trabajadorForm.form.valid"></button>
   </form>
   <p-toast></p-toast>
 </div>
-
