--- a/src/app/admin/trabajadores/trabajadores.component.html
+++ b/src/app/admin/trabajadores/trabajadores.component.html
@@ -52,17 +52,24 @@
       <div><span class="color-box"></span> Suplantación encontrada</div>
     </div>
     <div *ngIf="resultadosEvaluacion.length > 0; else noEvaluaciones">
-      <p-table [value]="resultadosEvaluacion" [autoLayout]="true" responsiveLayout="scroll">
+      <p-table [value]="resultadosEvaluacion" [autoLayout]="true" responsiveLayout="scroll" class="p-table-custom">
         <ng-template pTemplate="header">
           <tr>
             <th>Título de Evaluación</th>
             <th>Puntuación</th>
+            <th>Acciones</th>
           </tr>
         </ng-template>
         <ng-template pTemplate="body" let-resultado>
           <tr [ngClass]="{'red-row': !resultado.estado_Verificacion}">
             <td>{{ getEvaluacionTitulo(resultado.ID_Evaluacion) }}</td>
             <td>{{ resultado.Puntuacion }}</td>
+            <td>
+              <button pButton icon="pi pi-trash" class="p-button-rounded p-button-danger" (click)="confirmarEliminarResultado(resultado.id)" style="margin-right: 0.5rem;">
+                <span style="margin-right: 0.5rem;"></span>
+                Eliminar Resultado
+              </button>
+            </td>
           </tr>
         </ng-template>
       </p-table>
@@ -104,3 +111,4 @@
   </form>
 </p-dialog>
 <p-toast></p-toast>
+<p-confirmDialog header="Confirmar eliminación" icon="pi pi-exclamation-triangle" class="custom-confirm-dialog"></p-confirmDialog>
