--- a/src/app/worker/examenes/examenes.component.css
+++ b/src/app/worker/examenes/examenes.component.css
@@ -1,4 +1,3 @@
-
 * {
   box-sizing: border-box;
   max-width: 100%;
@@ -73,4 +72,5 @@ p-table th {
 .red-cell {
   color: red;
   font-size: 1.1rem;
+  font-weight: bold;
 }
