--- a/src/app/worker/vista-examen/vista-examen.component.css
+++ b/src/app/worker/vista-examen/vista-examen.component.css
@@ -16,16 +16,6 @@
   margin-left: auto;
 }
 
-.card.enter {
-  opacity: 0;
-  transform: translateY(20px);
-}
-
-.card.enter-active {
-  opacity: 1;
-  transform: translateY(0);
-}
-
 .field-radiobutton {
   margin-bottom: 1rem;
   position: relative;
@@ -46,20 +36,20 @@ h3 {
   margin-bottom: 2rem;
 }
 
-p-button {
+.p-button {
   font-size: 1rem;
   padding: 0.5rem 1rem;
   margin: 0.5rem;
   border-radius: 20px;
 }
 
-p-button-success {
+.p-button-success {
   background-color: #28a745;
   color: white;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
-p-button-success:hover {
+.p-button-success:hover {
   background-color: #218838;
 }
 
@@ -85,7 +75,6 @@ p-button-success:hover {
   text-align: center;
   width: 100%;
 }
-
 .main-content {
   display: flex;
   justify-content: center;
@@ -98,12 +87,16 @@ p-button-success:hover {
   height: 480px;
 }
 
-
 .loading-indicator {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+.validation-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .main-content video, .main-content canvas {
@@ -111,11 +104,11 @@ p-button-success:hover {
   top: 0;
   left: 0;
   border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   z-index: 2;
   display: none;
 }
-.main-content video.loaded, .main-content canvas {
+
+.main-content video.loaded, .main-content canvas.loaded {
   display: block;
 }
 
