--- a/src/app/admin/trabajadores/trabajadores.component.html
+++ b/src/app/admin/trabajadores/trabajadores.component.html
@@ -17,7 +17,10 @@
            responsiveLayout="scroll">
     <ng-template pTemplate="header">
       <tr>
-        <th>Nombre</th>
+        <th pSortableColumn="name">
+          Nombre
+          <p-sortIcon field="name"></p-sortIcon>
+        </th>
         <th>Acciones</th>
       </tr>
     </ng-template>
@@ -36,6 +39,7 @@
     </ng-template>
   </p-table>
 </div>
+
 
 <p-dialog header="Detalle del Trabajador" [(visible)]="displayViewDialog" [modal]="true" [style]="{width: '50vw'}" (onHide)="resetDialog()">
   <ng-container *ngIf="trabajadorSeleccionado">
@@ -99,7 +103,7 @@
         <label for="photo">Foto</label>
         <p-fileUpload #fileUpload name="photo" id="photo" accept="image/*" maxFileSize="1000000"
                        (onBeforeUpload)="onBeforeUpload($event)"
-                      customUpload="true" (uploadHandler)="onUpload($event)" chooseLabel="Elegir" cancelLabel="Cancelar">
+                      customUpload="true" (uploadHandler)="onUpload($event)" chooseLabel="Elegir" uploadLabel="Subir" cancelLabel="Cancelar">
         </p-fileUpload>
         <img *ngIf="trabajadorSeleccionado.photo" [src]="trabajadorSeleccionado.photo | safe: 'url'" alt="Foto del trabajador" class="photo-preview">
       </div>
