--- a/src/app/worker/vista-examen/vista-examen.component.css
+++ b/src/app/worker/vista-examen/vista-examen.component.css
@@ -1,16 +1,74 @@
-.container {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  max-width: 1200px;
-  margin: auto;
-  padding: 1rem;
-}
 html, body {
   height: 100%;
   margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   overflow: hidden;
 }
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 1200px;
+  width: 100%;
+  padding: 2rem;
+  box-sizing: border-box;
+  margin: 0 auto;
+}
+
+.header-container {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.main-content {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  width: 100%;
+  flex-grow: 1;
+  position: relative;
+}
+
+.camera-container {
+  position: absolute;
+  top: 70px;
+  left: -20px;
+  z-index: 1000;
+}
+
+.video-container {
+  position: relative;
+  width: 200px;
+  height: 150px;
+}
+
+video, canvas {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.drag-boundary {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+.form-container {
+  flex-grow: 1;
+  max-width: 650px;
+}
+
+.card {
+  width: 100%;
+  padding: 2rem;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  background-color: #fff;
+}
+
 h2 {
   color: var(--primary-color);
   font-size: 2rem;
@@ -24,188 +82,19 @@ h3 {
   font-size: 1.25rem;
 }
 
-.header-container {
-  text-align: center;
-  margin-bottom: 20px;
-}
-
-.main-content {
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  flex-grow: 1;
-  width: 100%;
-}
-
 .loading-indicator {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
-
-.camera-container {
+.buttons {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-bottom: 20px;
-  padding: 15px;
-}
-
-.camera-table {
-  border-radius: 10px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.title-cell {
-  background-color: #e0e0e0;
-  color: #ff0000;
-  font-size: 14px;
-  text-align: center;
-}
-.title-cell i {
-  margin-right: 5px;
-  font-size: 20px;
-  color: #ff0000;
-}
-
-.video-cell {
-  position: relative;
-}
-
-.small-video, .small-canvas {
-  width: 180px;
-  height: 150px;
-  position: relative;
-  z-index: 1;
-}
-
-.form-container {
-  flex-grow: 1;
-  max-width: 600px;
-  margin: auto;
-}
-
-.card {
-  padding: 2rem;
-  border-radius: var(--border-radius);
-  background-color: var(--surface-ground);
-  max-width: 700px;
-  width: calc(100% - 40px);
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  justify-content: center;
+  width: 100%;
+  margin-top: 1rem;
 }
 
 .p-button {
-  font-size: 1rem;
-  padding: 0.5rem 1rem;
-  border-radius: 20px;
-}
-
-.p-button-success {
-  background-color: #28a745;
-  color: white;
-}
-
-.p-button-success:hover {
-  background-color: #218838;
-}
-
-.hidden {
-  display: none;
-}
-
-.camera-header {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-}
-
-.toggle-camera {
-  cursor: pointer;
-  font-size: 14px;
-  color: red;
-}
-
-.video-container {
-  position: relative;
-  width: 180px;
-  height: 150px;
-  overflow: hidden;
-}
-.preview-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 1rem;
-  background-color: #f9f9f9;
-  position: relative;
-}
-
-.back-arrow {
-  position: absolute;
-  top: 10px;
-  left: 20px;
-  font-size: 2rem;
-  font-weight: bold;
-  color: #007bff;
-  cursor: pointer;
-  transition: color 0.3s ease;
-}
-
-.back-arrow:hover {
-  color: #0056b3;
-}
-
-.indication {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  max-width: 1000px;
-  padding: 2rem;
-  background-color: #ffffff;
-  border-radius: 0;
-  box-shadow: none;
-  text-align: center;
-}
-
-.indication h2 {
-  margin-bottom: 1rem;
-  font-size: 2rem;
-  color: var(--primary-color);
-}
-
-.indication p {
-  font-size: 1rem;
-  margin-bottom: 1rem;
-  color: #333;
-}
-
-.indication ul {
-  list-style-type: disc;
-  padding-left: 20px;
-  margin: 1rem 0;
-  text-align: left;
-}
-
-.indication li {
-  font-size: 1rem;
-  margin-bottom: 0.5rem;
-  line-height: 1.5;
-}
-
-.advice {
-  font-size: 1.1rem;
-  font-weight: bold;
-  color: #d9534f;
-  margin-top: 1rem;
-  text-align: center;
-}
-
-.indication button {
-  display: block;
-  width: 100%;
-  max-width: 200px;
-  margin: 0 auto;
+  margin: 0 0.5rem;
 }
