--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -14,7 +14,7 @@
         <input type="password" [(ngModel)]="password" (focus)="passwordFocused=true" (blur)="passwordFocused=false" id="password" name="password" required pInputText [type]="mostrar ? 'text' : 'password'">
         <i class="fa" [ngClass]="mostrar ? 'fa-eye' : 'fa-eye-slash'" (click)="toggleMostrar()"></i>
       </div>
-      <button type="submit" class="login-button">LOGIN</button>
+      <button type="submit" class="login-button" [disabled]="!user || !password">LOGIN</button>
     </form>
   </div>
   <p-toast></p-toast>
