--- a/src/app/admin/registro-trabajadores/registro-trabajadores.component.css
+++ b/src/app/admin/registro-trabajadores/registro-trabajadores.component.css
@@ -3,15 +3,25 @@
   max-width: 100%;
 }
 
+.register-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+  position: relative;
+  min-height: 100vh;
+}
 
 body {
   background: #f4f7f6;
   margin: 0;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  overflow-x: hidden;
 }
 
 .form-container {
-  max-width: 500px;
+  max-width: 550px;
+  width: 100%;
   margin: 40px auto;
   padding: 20px;
   border-radius: 10px;
@@ -47,12 +57,12 @@ body {
 .field input[type="text"],
 .field input[type="password"],
 .field input[type="file"] {
-  width: calc(100% - 20px);
+  width: 100%;
   padding: 10px;
   border: 1px solid #ccd0d5;
   border-radius: 4px;
   font-size: 16px;
-  box-shadow: inset 0 1px 3px rgba(0,0,0,0.1);
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
   transition: border-color 0.3s, box-shadow 0.3s;
 }
 
@@ -81,7 +91,7 @@ body {
 
 button[type="submit"] {
   display: block;
-  width: calc(100% - 20px);
+  width: 100%;
   padding: 15px 20px;
   margin-top: 10px;
   color: #ffffff;
@@ -105,31 +115,48 @@ button[type="submit"]:disabled {
   cursor: not-allowed;
 }
 
+.preview-image {
+  max-width: 150px;
+  max-height: 150px;
+  margin-top: 10px;
+  border-radius: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+@media (max-width: 768px) {
+  .form-container {
+    margin: 20px;
+    padding: 15px;
+    max-width: 100%;
+  }
+}
+
+.back-arrow {
+  position: absolute;
+  top: 10px;
+  left: 20px;
+  font-size: 2.5rem;
+  font-weight: bold;
+  color: #007bff;
+  cursor: pointer;
+  transition: color 0.3s ease, transform 0.3s ease;
+}
+
+.back-arrow:hover {
+  color: #ff5733;
+  transform: scale(1.2);
+}
+.error-message {
+  color: #dc3545;
+  font-size: 14px;
+  margin-top: 5px;
+}
 @media (max-width: 768px) {
   .form-container {
     margin: 20px;
     padding: 15px;
   }
 }
-
-.field i {
-  position: absolute;
-  top: 50%;
-  left: 10px;
-  transform: translateY(-50%);
-  color: #007bff;
-  transition: color 0.3s;
-}
-
-.field input[type="text"]:focus + i,
-.field input[type="password"]:focus + i {
-  color: #0056b3;
-}
-
-.form-container {
-  animation: slideIn 0.5s ease-in-out both;
-}
-
 @keyframes slideIn {
   0% {
     transform: translateY(-20px);
@@ -139,20 +166,4 @@ button[type="submit"]:disabled {
     transform: translateY(0);
     opacity: 1;
   }
-}
-.error-message {
-  color: #dc3545;
-  font-size: 14px;
-  margin-top: 5px;
-}
-
-.preview-image {
-  max-width: 150px;
-  max-height: 150px;
-  margin-top: 10px;
-  border-radius: 10px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-.p-button-secondary {
-  margin-top: 10px;
 }
