--- a/src/app/worker/vista-examen/vista-examen.component.css
+++ b/src/app/worker/vista-examen/vista-examen.component.css
@@ -98,3 +98,9 @@ h3 {
 .p-button {
   margin: 0 0.5rem;
 }
+.submit-button-container {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  margin-top: 1rem;
+}
